# claude-lifejacket

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build-exe.ps1  gui_launcher.py  install.ps1  lifejacket  lifejacket.bat  pyproject.toml  run-tests.bat
.github/workflows/: build.yml
release-notes/: v0.1.2.md  v0.1.3.md
src/claude_lifejacket/: __init__.py  __main__.py  app.py  appmodel.py  cli.py  dashboard.py  discover.py  hookconfig.py  safewrite.py  startup.py  store.py  surfaces.py  sync.py
tests/: test_app_smoke.py  test_appmodel.py  test_cli.py  test_dashboard.py  test_discover.py  test_hookconfig.py  test_safewrite.py  test_startup.py  test_store.py  test_sync.py
