[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-lifejacket"
version = "0.1.0"
description = "Keep every Claude session aware of your projects — safely syncs a curated project digest into Claude Code and Cowork memory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jack Bhanded" }]
keywords = ["claude", "claude-code", "cowork", "memory", "anthropic", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
# Zero runtime dependencies for the core engine — that's a feature. The optional
# Windows tray (added later) lives behind an extra so the core stays dependency-free.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
tray = ["PySide6>=6.5"]

[project.scripts]
lifejacket = "claude_lifejacket.cli:main"

[project.urls]
Homepage = "https://github.com/JackBhanded/claude-lifejacket"
Repository = "https://github.com/JackBhanded/claude-lifejacket"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
